# CVAT-Utils

./: CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: release.yml
cvat_utils/: __init__.py  api_requests.py  config.py  core.py  log.py  models.py  postprocess.py  utils.py  version.py
cvat_utils/cli/: __init__.py  download.py
cvat_utils/config/: logging.yaml
cvat_utils/utils/: formats.py  log.py  masking.py  rc_params.py
