### Package Build ###
[metadata]
name = cvat_utils
version = attr: cvat_utils.version.__version__
description = Custom utils and scripts for downloading and uploading data in CVAT.
long_description = file: README.md
author = Rail Chamidullin
author_email = chamidullinr@gmail.com
url = https://github.com/chamidullinr/cvat-utils
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
python_requires = >=3.8
packages = find_namespace:
include_package_data = True
install_requires =
    PyYAML>=6.0
    python-dotenv>=1.0
    numpy>=1.22
    pandas>=1.4
    pydantic>=1.10
    fire>=0.4
    requests>=2.28

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    cvat-utils = cvat_utils.cli:app

### Code Quality ###
[flake8]
max-line-length = 100
extend-ignore =
    E203  # See https://github.com/PyCQA/pycodestyle/issues/373
    D100  # Missing docstring in public module
    D101  # Missing docstring in public class
    D104  # Missing docstring in public package
    D105  # Missing docstring in magic method
    D107  # Missing docstring in __init__
    D401  # First line should be in imperative mood
exclude =
    .git
    __pycache__
    .ipynb_checkpoints
    dist
    build
